fixed flexbox and truncated text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,12 +25,9 @@
         background: #111827;
     }
     .text-primary {
-        @apply text-[0.9rem] text-primary-base dark:text-primary-dark;
+        @apply text-[0.95rem] text-primary-base dark:text-primary-dark;
     }
     .text-secondary {
-        @apply text-[0.75rem] text-secondary-base dark:text-secondary-dark;
+        @apply text-[0.8rem] text-secondary-base dark:text-secondary-dark;
     }
-}
-
-@layer components {
 }
